# src/routes/story.router.ts
@@ -12,9 +12,9 @@ const storyRouter = express.Router();
  *   name: Story
  *   description: Story management api
  *  
- * /api/stories:
+ * /api/projects/{projectId}/stories:
  *   get:
- *     summary: Get all stories
+ *     summary: Get all stories of certain project
  *     tags: [Story]
  *     responses:
  *       200:
@@ -25,9 +25,9 @@ const storyRouter = express.Router();
  *                items:
  *                  $ref: '#/components/schemas/StoryReturn'
  *               
- *         description: Return all a list of all stories
+ *         description: Return all a list of all stories at specific project
  *   post:
- *     summary: Create a new Story
+ *     summary: Create a new Story in a project
  *     tags: [Story]
  *     requestBody:
  *       required: true
@@ -49,20 +49,28 @@ const storyRouter = express.Router();
  *              
  */
 
-storyRouter.route("/")
-        .get(StoryController.getAll)
-        .post(validateStoryCreate, StoryController.create);
+// storyRouter.route("/")
+//         .get(StoryController.getAll)
+//         .post(validateStoryCreate, StoryController.create);
 
+// storyRouter.route("/")
+//         .get(StoryController.getAll)
+//         .post(validateStoryCreate, StoryController.create)
 
 /**
  * @openapi
- * /api/stories/{id}:
+ * /api/projects/{projectId}/stories/{storyId}:
  *  patch:
  *      summary: Update any (or multiple) fields in the story
  *      tags: [Story]
  *      parameters:
  *      - in: path
- *        name: id
+ *        name: projectId
+ *        schema:
+ *          type: integer
+ *        required: true
+ *      - in: path
+ *        name: storyId
  *        schema:
  *          type: integer
  *        required: true
@@ -81,7 +89,12 @@ storyRouter.route("/")
  *      tags: [Story]
  *      parameters:
  *      - in: path
- *        name: id
+ *        name: projectId
+ *        schema:
+ *          type: integer
+ *        required: true
+ *      - in: path
+ *        name: storyId
  *        schema:
  *          type: integer
  *        required: true
@@ -96,7 +109,12 @@ storyRouter.route("/")
  *    tags: [Story]
  *    parameters:
  *    - in: path
- *      name: id
+ *      name: projectId
+ *      schema:
+ *        type: integer
+ *      required: true
+ *    - in: path
+ *      name: storyId
  *      schema:
  *        type: integer
  *      required: true
@@ -111,9 +129,9 @@ storyRouter.route("/")
  *          description: Story with specified id does not exist
  *     
  */
-storyRouter.route("/:id").all(validateId)
-        .get(StoryController.findbyId)
-        .delete(StoryController.deletebyId)
-        .patch(validateStoryUpdate, StoryController.updatebyId)
+// storyRouter.route("/:storyId").all(validateId)
+//         .get(StoryController.findbyId)
+//         .delete(StoryController.deletebyId)
+//         .patch(validateStoryUpdate, StoryController.updatebyId)
 
 export default storyRouter;
